# InfraAssistant

./: .gitignore  Makefile  README.md  chainlit.md  pyproject.toml  requirements.txt
.chainlit/: config.toml
.github/workflows/: ci.yaml
src/: core.py  main.py
src/assistant/integrations/kubernetes/: api.py  port_forward.py
src/assistant/integrations/prometheus/: __init__.py  client.py
src/assistant/logic/: alerts-function-defs.json  api.py  constants.py  fake_llm.py  helpers.py  helpers_test.py  llm.py  message_history.py  metrics-function-defs.json  prompts.py  tools.py
src/assistant/run/: core.py  main.py
tests/: test_main.py
